Made the descriptions a little clearer and better.

--- a/bundles/ilg.gnumcueclipse.debug.gdbjtag/src/ilg/gnumcueclipse/debug/gdbjtag/ui/messages.properties
+++ b/bundles/ilg.gnumcueclipse.debug.gdbjtag/src/ilg/gnumcueclipse/debug/gdbjtag/ui/messages.properties
@@ -35,19 +35,19 @@ PeripheralsPreferencePage_changedLightColor_label=Changed light background color
 PeripheralsPreferencePage_useFadingBackground_label=Use fading background for changed lines
 
 GlobalRegisterListPagePropertyPage_description=Specify the default global register list file. The register \
-list file defines the list of registers displayed in the Register View.  If you do not specify a list then \
-a default list from the target will be used.  If you find this list too long you can specify a file here \
-that lists the register that you would like to see. This setting can be overridden by the workspace, project, \
+list file defines the list of registers displayed in the Register View. If you do not specify a list then \
+a default list from the target will be used. If you want to refine this list you can specify a file \
+that lists the registers that you want to see. This global setting can be overridden by the workspace, project, \
 or debug launch configuration setting.
 WorkspaceRegisterListPagePropertyPage_description=Specify the default workspace register list file. The register \
-list file defines the list of registers displayed in the Register View.  If you do not specify a list then \
-a default list from the target will be used.  If you find this list too long you can specify a file here \
-that lists the register that you would like to see. This setting will override the global setting, but can be \
+list file defines the list of registers displayed in the Register View. If you do not specify a list then \
+a default list from the target will be used. If you want to refine this list you can specify a file here \
+that lists the registers that you want to see. This workspace setting will override the global setting, but can be \
 overridden by the project or debug launch configuration setting.
 ProjectRegisterListPagePropertyPage_description=Specify the project register list file. The register \
-list file defines the list of registers displayed in the Register View.  If you do not specify a list then \
-a default list from the target will be used.  If you find this list too long you can specify a file here \
-that lists the register that you would like to see. This setting will override both the workspace and global \
+list file defines the list of registers displayed in the Register View. If you do not specify a list then \
+a default list from the target will be used. If you want to refine this list you can specify a file here \
+that lists the registers that you want to see. This project setting will override both the workspace and global \
 settings, but can be overridden by the debug launch configuration setting.
 RegisterListPage_file_label=Register List File
 
