FSTU-44 & FADU-100 Add pref for max hw breakpoints
Added global, workspace, project, and launch config settings for
specifying the maximum number of hardware breakpoints on the target.

--- a/bundles/ilg.gnumcueclipse.debug.gdbjtag/src/ilg/gnumcueclipse/debug/gdbjtag/ui/messages.properties
+++ b/bundles/ilg.gnumcueclipse.debug.gdbjtag/src/ilg/gnumcueclipse/debug/gdbjtag/ui/messages.properties
@@ -51,6 +51,29 @@ that lists the registers that you want to see. This project setting will overrid
 settings, but can be overridden by the debug launch configuration setting.
 RegisterListPage_file_label=Register List File
 
+GlobalHwBreakpointLimitPagePropertyPage_description=Specify the maximum number of hardware breakpoints that \
+exist on a target system. Value must be one of: blank, 'TOK_U' (or -1), 'TOK_0' (or 0), or a positive integer.\n\n\
+Caution: Using 0 or 'TOK_0' means that no hardware breakpoints can or will be used. \
+Using '-1' or 'TOK_U' will cause problems if you attempt to set more hardware breakpoints than the core supports.\n\n\
+This global setting can be overridden by the workspace, project, \
+or debug launch configuration setting.\n\n
+WorkspaceHwBreakpointLimitPagePropertyPage_description=Specify the maximum number of hardware breakpoints that \
+exist on a target system. Value must be one of: blank, 'TOK_U' (or -1), 'TOK_0' (or 0), or a positive integer.\n\n\
+Caution: Using 0 or 'TOK_0' means that no hardware breakpoints can or will be used. \
+Using '-1' or 'TOK_U' will cause problems if you attempt to set more hardware breakpoints than the core supports.\n\n\
+This workspace setting will override the global setting, but can be \
+overridden by the project or debug launch configuration setting.\n\n
+ProjectHwBreakpointLimitPagePropertyPage_description=Specify the maximum number of hardware breakpoints that \
+exist on a target system. Value must be one of: blank, 'TOK_U' (or -1), 'TOK_0' (or 0), or a positive integer.\n\n\
+Caution: Using 0 or 'TOK_0' means that no hardware breakpoints can or will be used. \
+Using '-1' or 'TOK_U' will cause problems if you attempt to set more hardware breakpoints than the core supports.\n\n\
+This project setting will override both the workspace and global \
+settings, but can be overridden by the debug launch configuration setting.\n\n
+HwBreakpointLimitLabel=Hardware Breakpoint Limit
+
+HwBreakpointLimitUnlimited=unlimited
+HwBreakpointLimitNone=none
+
 SvdPathProperties_intro_label=\
 Normally, if there is a device attached to the build configuration, \
 and there is a package (xPack or CMSIS Pack) for it, the path to \
@@ -84,3 +107,14 @@ TabConfig_registerlist_button_Browse_text=Browse...
 TabConfig_registerlist_button_Variables_text=Variables...
 TabConfig_registerlist_path_text=Actual Path
 
+TabConfig_hwbp_group_text=Hardware Breakpoints
+TabConfig_hwbplimit_label_text=Hardware Breakpoint Limit
+TabConfig_hwbplimit_actual_text=Configured Hardware Breakpoint Limit
+
+TabConfig_hwbplimit_default=The default value is hard coded in the application.  You will need to specify a different value in the preferences, project properties, or this launch configuration.
+
+TabConfig_hwbplimit_links_1=When unspecified here, will use a value of 'NNN' (from <a>TOK_SCOPE</a>).
+TabConfig_hwbplimit_links_4=See also the <a>global</a> and <a>workspace</a> preferences, and the <a>project</a> properties.
+TabConfig_hwbplimit_links_2=Caution: Using 0 or 'TOK_0' means that no hardware breakpoints can or will be used.
+TabConfig_hwbplimit_links_3=Caution: Using '-1' or 'TOK_U' will cause problems if you attempt to set more hardware breakpoints than the core supports.
+TabConfig_hwbplimit_error=HW Breakpoint Limit must be one of 'TOK_U' (or '-1'), 'TOK_0' (or '0'), or a positive integer. Specifying 'TOK_0' or '0' will prevent the use of hardware breakpoints.
